# mmsws

./: .gitignore  Makefile  README.md  conda-lock.yml  environment.yml  mypy.ini  pyproject.toml  ruff.toml
docs/: Makefile  conf.py
src/mmsws/: __init__.py
src/mmsws/utils/: __init__.py  logging.py
