[tool.poetry]
name = "mmsws"
version = "0.1.0"
description = "A Python API for LASP MMS Science Data Center (SDC) web services"
authors = [
    "Tien Vo <tvo.work@proton.me>"
]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "mmsws", from = "src", to = "mmsws" }
]
repository = "https://github.com/tien-vo/mmsws"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "space plasma",
    "heliophysics",
    "plasma",
    "plasma physics",
    "science",
    "magnetospheric multiscale mission",
]

[tool.poetry.dependencies]
python = "^3.12"
tvolib = { git = "https://github.com/tien-vo/tvolib.git", rev = "4e24c30" }
ssqueezepy = { git = "https://github.com/OverLordGoldDragon/ssqueezepy.git", rev = "fa4c720" }
xarray = "^2024.9.0"
dask = { version = "^2024.9.1", extras = ["distributed"] }
zarr = "^2.18.3"
cdflib = "^1.3.1"
pathos = "^0.3.3"
tqdm = "^4.66.5"
xhistogram = "^0.3.2"
shapely = "^2.0.6"
pyfftw = "^0.14.0"
bottleneck = "^1.4.0"
opt-einsum = "^3.4.0"
flox = "^0.9.13"

[tool.poetry.group.develop]
optional = true

[tool.poetry.group.develop.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pandas-stubs = "^2.2.2.240909"
types-requests = "^2.32.0.20240914"
types-tqdm = "^4.66.0.20240417"
jupyterlab = "^4.2.5"
jupyterlab-vim = "^4.1.4"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"
quaternionic = "^1.0.12"


[tool.black]
line-length = 79


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
